fixed spacing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -96,7 +96,8 @@
 .flex-container {
   display: flex;
   flex-wrap: wrap;
-  text-align: center;
+  justify-content: space-evenly;
+  
 }
 
 html, body {
@@ -106,7 +107,7 @@ html, body {
 
 body > div {
   width: 100%;
-  height: 100%;
+  height: 90%;
   background: #6cecac;
 }
 
@@ -114,7 +115,9 @@ body > div > div {
   width: 100%;
   margin-top: 20px;
   background: white;
+  margin-bottom: 20px;
 }
+
 .dropdown {
   position: relative;
   display: inline-block;
